# am-blender

./: ._am-blender.code-workspace  ._install.sh  ._keymaps_shortcuts.txt  .gitignore  .gitmodules  AllKeymaps.txt  Cargo.toml  README.md  am-blender.code-workspace  install.sh  keymap_reference.txt  keymaps.txt
addons/am-blender/: __init__.py  keymap.py  packages.py
addons/am-blender/convert/: operators.py
addons/am-blender/custom_prop/: operators.py
addons/am-blender/data_util/: operators.py  pie.py
addons/am-blender/import_export/: operators.py
addons/am-blender/nav/: operators.py  pie.py
addons/am-blender/object_prop/: pie.py
addons/am-blender/properties/: __init__.py  id.py  material.py
addons/am-blender/shader_util/: operators.py  pie.py
addons/am-blender/std/: __init__.py  dtypes.py  fn.py  meta.py
addons/am-blender/util/: pip.py
addons/am_blender/: .___init__.py  __init__.py  keymap.py  packages.py
addons/am_blender/convert/: operators.py  pie.py
addons/am_blender/custom_prop/: operators.py  pie.py
addons/am_blender/data_util/: operators.py  pie.py
addons/am_blender/datafiles/: google_model_viewer.html
addons/heavypoly/: HEAVYPOLY_HOTKEYS.py  HEAVYPOLY_draw_primitives.py  HEAVYPOLY_pie_save.py  HEAVYPOLY_pie_selection.py  HEAVYPOLY_pie_specials.py  HEAVYPOLY_select_through_border.py
addons/reload-addons/: reload_addons.py
addons/reload_addons/: __init__.py  reload_addons.py
assets/shaders/: AOBentNormals.osl
config/: startup.blend  userpref.blend
cpp/: CMakeLists.txt
cpp/src/: main.cpp
eppendorf/: todo.yml
(+77 files in other folders)
